// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform mode correctly renders composited guides 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1,
        -1,
      ],
      "type": "Point",
    },
    "properties": Object {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": Array [
        0,
      ],
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        1,
        -1,
      ],
      "type": "Point",
    },
    "properties": Object {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": Array [
        1,
      ],
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        1,
        1,
      ],
      "type": "Point",
    },
    "properties": Object {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": Array [
        2,
      ],
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1,
        1,
      ],
      "type": "Point",
    },
    "properties": Object {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": Array [
        3,
      ],
    },
    "type": "Feature",
  },
]
`;

exports[`Transform mode correctly renders composited guides 2`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        0,
        1.2223901604670657,
      ],
      "type": "Point",
    },
    "properties": Object {
      "editHandleType": "rotate",
      "guideType": "editHandle",
    },
    "type": "Feature",
  },
]
`;

exports[`Transform mode correctly renders composited guides 3`] = `
Array [
  Object {
    "bbox": Array [
      -1,
      -1,
      1,
      1,
    ],
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -1,
            -1,
          ],
          Array [
            1,
            -1,
          ],
          Array [
            1,
            1,
          ],
          Array [
            -1,
            1,
          ],
          Array [
            -1,
            -1,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "properties": Object {},
    "type": "Feature",
  },
]
`;

exports[`Transform mode correctly renders composited guides 4`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          0,
          1,
        ],
        Array [
          0,
          1.2223901604670657,
        ],
      ],
      "type": "LineString",
    },
    "properties": Object {},
    "type": "Feature",
  },
]
`;
